[package]
name = "dense"
version = "1.0.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmai.com>"]
edition = "2018"

description = "Reads generic data and label files in the MNIST file format."
license = "Apache-2.0"
exclude = ["tests"]

repository = "https://github.com/JonathanWoollett-Light/dense"
documentation = "https://docs.rs/dense/"

keywords = ["mnist","machine-learning","encoding","compression"]
catagories= ["science","encoding","compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
mnist_read = "1.0.0"